# CS236Project1

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  EOFAutomaton.cpp  EOFAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  Graph.cpp  Graph.h  Header.h  IDAutomaton.cpp  IdAutomaton.cpp  IdAutomaton.h  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QueriesAutomaton.cpp  QueriesAutomaton.h  QuestionMarkAutomaton.cpp  QuestionMarkAutomaton.h  (+18 more)
